--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/Yggdrasil09/A-Timestamp#readme",
   "dependencies": {
     "nodemon": "^1.18.9"
+  },
+  "engines":{
+    "node" : "11.4.0"
   }
 }
